--- a/angular/src/app/workspace/workspace/workspace.component.scss
+++ b/angular/src/app/workspace/workspace/workspace.component.scss
@@ -85,3 +85,11 @@
     }
   }
 }
+
+ddap-simple-search {
+  position: absolute;
+  top: 64px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
